doc security
